--- a/generator.html
+++ b/generator.html
@@ -4,6 +4,18 @@
 
 <!-- Mirrored from unlimitedapps.online/nfs-no-limits/generator.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Sep 2017 07:33:39 GMT -->
 <head>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86659129-17"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-86659129-17');
+</script>
+
+	
     <title>SimCity Hack - Online Resource Generator</title>
 	<meta name="description" content="New SimCity hack is finally here and its working on both iOS and Android platforms. This generator is free and its really easy to use!">
 	<meta name="author" content="RellaMan">
